Fix some assignments of string literals to LPSTR (instead of LPCSTR)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 13
    • Affects Version/s: 11, 13
    • Component/s: client-libs


        -------- Forwarded Message --------
        Subject: <Sound Dev> [PATCH] Fix some assignments of string literals to LPSTR (instead of LPCSTR)
        Date: Tue, 14 May 2019 00:36:49 +0000
        From: Andrew Luo <andrewluotechnologies@outlook.com>
        To: sound-dev@openjdk.java.net <sound-dev@openjdk.java.net>


        I’ve been trying to get the JDK to compile with the new /permissive- switch in VS2017 (https://devblogs.microsoft.com/cppblog/permissive-switch/) however there have been a few issues in various parts of the code. There are a few issues in the libjsound code where we attempt to assign string literals to LPSTR variables (instead of LPCSTR). I took some time to fix some of these and attached a patch. Let me know if you have any comments/feedback. I’m assuming that libjsound is owned by sound-dev, but if I’m mistaken, please do let me know the right team/mailing list to send this to.

         

        c:/Users/Andrew/Documents/mercurial/openjdk/jdk/src/java.desktop/windows/native/libjsound/PLATFORM_API_WinOS_DirectSound.cpp(363): error C2440: 'return': cannot convert from 'const char [16]' to 'LPSTR'

         

        Thanks,

              Assignee:
              Philip Race
              Reporter:
              Philip Race
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved: