8224056: Fix some assignments of string literals to LPSTR (instead of LPCSTR)

Reviewed-by: prr